# evalcraft

./: .gitignore  Cargo.toml  README.md
crates/evalcraft-cli/: Cargo.toml
crates/evalcraft-cli/src/: main.rs
crates/evalcraft-core/: Cargo.toml
crates/evalcraft-core/examples/: simple.rs
crates/evalcraft-core/src/: config.rs  datasource.rs  lib.rs  report.rs  runner.rs  scorer.rs  task.rs  testing.rs  trace.rs  types.rs
crates/evalcraft-core/src/scorers/: contains.rs  embedding.rs  exact.rs  json.rs  levenshtein.rs  regex.rs  sql.rs
crates/evalcraft-store/: Cargo.toml
crates/evalcraft-store/src/: lib.rs
crates/evalcraft-types/: Cargo.toml
crates/evalcraft-types/src/: lib.rs
docs/: advanced-llm-eval.md  getting-started-cli.md  getting-started-library.md  overview.md  scorers.md
examples/: data.jsonl  demo_eval.yaml  eval.yaml  generate_traced_report.rs  json_schema.json  json_validation.jsonl  library_usage.rs  llm_testing.jsonl  llm_testing_example.rs  localhost_llm.rs  openai_example.rs  openai_tests.jsonl  regex_patterns.jsonl  sql_queries.jsonl  sqlite_persistence.rs  substring_matching.jsonl  test_example.rs  tracing_example.rs
