[package]
name = "evalcraft-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for evalcraft-core: run agent and LLM evaluations."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
evalcraft-core = { path = "../evalcraft-core" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }


