[package]
name = "evalcraft-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
notify = "6.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
evalcraft-core = { path = "../evalcraft-core" }
evalcraft-store = { path = "../evalcraft-store" }
glob = "0.3"
